# ordi

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: block.rs  epoch.rs  height.rs  inscription.rs  lib.rs
src/bitcoin/: blk.rs  block_reader.rs  index.rs  mod.rs
src/bitcoin/common/: utils.rs
src/bitcoin/proto/: block.rs  header.rs  mod.rs  tx.rs  varuint.rs
src/bitcoin/proto/script/: custom.rs  mod.rs
src/dump-event/: main.rs
