[package]
name = "ordi"
description = "Light indexer for Ordinals."
version = "0.1.0"
license = "GPL-3.0"
homepage = "https://github.com/hertarr/ordi"
repository = "https://github.com/hertarr/ordi"
keywords = ["bitcoin", "ord"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0"
dotenv = "0.15.0"
bitcoin = "0.30.1"
ord-bitcoincore-rpc = "0.17.1"
rusty-leveldb = "2.0.0"
byteorder = "1.4.3"
rayon = "1.7.0"
dirs = "5.0.1"
seek_bufread = "1.2.2"
derive_more = "0.99.17"
log = "0.4.20"
simplelog = "0.12.1"

[[bin]]
name = "dump-event"
path = "src/dump-event/main.rs"

[lib]
name = "ordi"
path = "src/lib.rs"

[profile.release-with-debug]
inherits = "release"
debug = true